--- a/package.json
+++ b/package.json
@@ -9,16 +9,15 @@
   },
   "repository": {
     "type": "git"
- 
   },
   "author": "",
   "license": "ISC",
-  "bugs": {
-  
-  },
+  "bugs": {},
   "dependencies": {
     "console.table": "^0.10.0",
+    "express": "^4.18.2",
     "inquirer": "^8.2.4",
+    "mysql": "^2.18.1",
     "mysql2": "^3.6.3"
   }
 }
